# oxislam

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/oxislam-features/: Cargo.toml
crates/oxislam-features/examples/: detect_features.rs
crates/oxislam-features/src/: descriptor.rs  extractor.rs  feature.rs  keypoint.rs  lib.rs
crates/oxislam-features/src/descriptor/: mod.rs  patch.rs
crates/oxislam-features/src/detector/: harris.rs  mod.rs
crates/oxislam-features/src/traits/: descriptor.rs  detector.rs  matcher.rs  mod.rs
crates/oxislam-geometry/: Cargo.toml
crates/oxislam-geometry/src/: lib.rs
crates/oxislam-image/: Cargo.toml
crates/oxislam-image/src/: image.rs  lib.rs  parallel.rs  pixel.rs
crates/oxislam-image/src/filter/: gaussian.rs  kernel.rs  mod.rs  sobel.rs
crates/oxislam-image/src/image/: convert.rs  mod.rs  ops.rs  types.rs
