[package]
name = "oxislam-features"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Feature extraction and matching algorithms"

[dependencies]
rayon = { version = "1.11", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
oxislam-geometry = { path = "../oxislam-geometry" }
oxislam-image = { path = "../oxislam-image" }

[features]
default = []
rayon = ["dep:rayon", "oxislam-image/rayon"]
serde = ["dep:serde", "oxislam-geometry/serde"]

[dev-dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
