[package]
name = "oxislam-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Geometric types for computer vision"

[dependencies]
nalgebra = { version = "0.34", default-features = false }

[features]
default = []
serde = ["nalgebra/serde-serialize"]
