[package]
name = "oxislam-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Image processing primitives for computer vision"

[dependencies]
rayon = { version = "1.11", optional = true }

[features]
default = []
rayon = ["dep:rayon"]
